# CS4389-Chat-Project

./: .gitignore  CMakeLists.txt  README.md  Readme.md  client.Dockerfile  client.c  docker-compose.yml  log_example.txt  logger.c  logger.h  loginFeaturesUseTCP.txt  server.Dockerfile  server.c
src/: client.c  server.c
src/common/: crypto.c  crypto.h  logger.c  logger.h  prompt.c  prompt.h  proto.c  proto.h
